# vmod-otel-rs

./: Cargo.toml  README.md  otel.vcl  vmod.vcc
src/: lib.rs
tests/: test01.vtc
