[package]
name = "vmod_otel_rs"
version = "0.0.1"
edition = "2021"

[build-dependencies]
varnish = { git = "https://github.com/gquintard/varnish-rs.git", branch = "main" } 

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
varnish = { git = "https://github.com/gquintard/varnish-rs.git", branch = "main" } 
varnish-sys = { git = "https://github.com/gquintard/varnish-rs.git", branch = "main" } 

[lib]
crate-type = ["cdylib"]
